nullaway_error_d574d2c4-2a1b-46bf-82b0-628625789c78.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/CreatureMapObjectLoader.java:94: error: [NullAway] dereferenced expression spriteSheet is @Nullable
        if (prefix != null && spriteSheet.equalsIgnoreCase(prefix)) {
                                         ^
    (see http://t.uber.com/nullaway )
